[gd_scene load_steps=8 format=3 uid="uid://cn638kqmlu0sn"]

[ext_resource type="Theme" uid="uid://08b538gi4l1t" path="res://ui/theme.theme" id="1_tmf6t"]
[ext_resource type="LabelSettings" uid="uid://c52euoq5c832g" path="res://ui/title.tres" id="2_8r5qe"]
[ext_resource type="Script" path="res://scripts/lose_screen.gd" id="2_r33je"]

[sub_resource type="Animation" id="Animation_ncyfh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 144)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TryAgainMessage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2bjpn"]
resource_name = "lose"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 144), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h2ire"]
resource_name = "suggest_restart"
length = 1.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TryAgainMessage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1, 1.5, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d8sy8"]
_data = {
"RESET": SubResource("Animation_ncyfh"),
"lose": SubResource("Animation_2bjpn"),
"suggest_restart": SubResource("Animation_h2ire")
}

[node name="LoseScreen" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_top = 144.0
offset_right = 160.0
offset_bottom = 288.0
theme = ExtResource("1_tmf6t")
script = ExtResource("2_r33je")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "lose"
libraries = {
"": SubResource("AnimationLibrary_d8sy8")
}

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Game Over"
label_settings = ExtResource("2_8r5qe")
horizontal_alignment = 1

[node name="TryAgainMessage" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -22.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "-Start: Try Again-
-Select: Main Menu-"
horizontal_alignment = 1

[node name="ScoreBoard" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -16.0
offset_right = 40.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ScoreLabel" type="Label" parent="ScoreBoard"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"

[node name="ScoreCounter" type="Label" parent="ScoreBoard"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="RecordLabel" type="Label" parent="ScoreBoard"]
layout_mode = 2
size_flags_horizontal = 3
text = "Record:"

[node name="RecordCounter" type="Label" parent="ScoreBoard"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
